force-app/main/default/objects/Payment__c/fields/Installment__c.field-meta.xml
<CustomField>
    <fullName>Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installment</label>
    <referenceTo>Installment__c</referenceTo>
    <relationshipLabel>Payment</relationshipLabel>
    <relationshipName>Payment</relationshipName>
    <type>Lookup</type>
</CustomField>