force-app/main/default/objects/Payment__c/validationRules/Payment_Date_Not_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Date_Not_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Payment_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Payment_Date__c</errorDisplayField>
    <errorMessage>Payment date cannot be in the future</errorMessage>
</ValidationRule>